<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Address location</string>
    <string name="action_settings">Settings</string>
    <string name="button_add_address">Add address</string>
    <string name="content_description_default">Default content description</string>
    <string name="save_address">Save address</string>
    <string name="save_address_name">Name</string>
    <string name="save_address_address1">Address 1</string>
    <string name="save_address_address2">Address 2</string>
    <string name="save_address_zip">Zip</string>
    <string name="save_address_state">State</string>
    <string name="save_address_country">Country</string>
    <string name="save_address_city">City</string>
    <string name="save_address_cancel">Cancel</string>
    <string name="save_address_save">Save</string>

</resources>